[tool.poetry]
name = "umudugudu"
version = "0.1.0"
description = "Plot the umudugudus in Kigali"
authors = ["Felipe Aguirre Martinez <felipeam86@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
geopandas = "^0.8.1"
pyarrow = "^2.0.0"
plotly = "^4.14.3"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
ghp-import = "^1.0.0"
jupyter = "^1.0.0"
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
